[tool.poetry]
name = "poetry-demo"
version = "0.1.0"
description = ""
authors = ["Andrii Sova <sovaanfriy95@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.0.1"
waitress = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
